src/grammar/DataStructureGrammarParser.ts
// Generated from ./src/grammar/DataStructureGrammarParser.g4 by ANTLR 4.12.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import DataStructureGrammarParserVisitor from "./DataStructureGrammarParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class DataStructureGrammarParser extends Parser {
	public static readonly BOOL_TYPE = 1;
	public static readonly INT_TYPE = 2;
	public static readonly STRING_TYPE = 3;
	public static readonly JSONFILE_TYPE = 4;
	public static readonly PATH_TYPE = 5;
	public static readonly MUTATOR_TYPE = 6;
	public static readonly INTERFACE_TYPE = 7;
	public static readonly FLOAT_TYPE = 8;
	public static readonly IF = 9;
	public static readonly ELSE = 10;
	public static readonly WHILE = 11;
	public static readonly PRINT = 12;
	public static readonly FUNCTION = 13;
	public static readonly BOOL = 14;
	public static readonly TRUE = 15;
	public static readonly FALSE = 16;
	public static readonly CREATE_INTERFACE = 17;
	public static readonly REQUIRE_PLUGIN = 18;
	public static readonly CREATE_MUTATOR = 19;
	public static readonly CREATE_WEIGHTED_MUTATOR = 20;
	public static readonly GENERATE = 21;
	public static readonly GENERATE_WITH_MUTATORS = 22;
	public static readonly ID = 23;
	public static readonly INT = 24;
	public static readonly FLOAT = 25;
	public static readonly STRING = 26;
	public static readonly SET = 27;
	public static readonly PLUS = 28;
	public static readonly MINUS = 29;
	public static readonly TIMES = 30;
	public static readonly DIVIDE = 31;
	public static readonly GT = 32;
	public static readonly GE = 33;
	public static readonly LT = 34;
	public static readonly LE = 35;
	public static readonly EQ = 36;
	public static readonly COMMA = 37;
	public static readonly NE = 38;
	public static readonly ASSIGN = 39;
	public static readonly LPAREN = 40;
	public static readonly RPAREN = 41;
	public static readonly LBRACE = 42;
	public static readonly RBRACE = 43;
	public static readonly LSQRBRAKET = 44;
	public static readonly RSQRBRAKET = 45;
	public static readonly SEMICOLON = 46;
	public static readonly COLON = 47;
	public static readonly DOUBLEQUOTE = 48;
	public static readonly COMMENT = 49;
	public static readonly WS = 50;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_syntax = 1;
	public static readonly RULE_declaration = 2;
	public static readonly RULE_statements = 3;
	public static readonly RULE_functions = 4;
	public static readonly RULE_array = 5;
	public static readonly RULE_any = 6;
	public static readonly RULE_variables = 7;
	public static readonly RULE_createInterface = 8;
	public static readonly RULE_createMutator = 9;
	public static readonly RULE_createWeightedMutator = 10;
	public static readonly RULE_generate = 11;
	public static readonly RULE_generateWithMutators = 12;
	public static readonly RULE_requirePlugin = 13;
	public static readonly literalNames: (string | null)[] = [ null, "'bool'", 
                                                            "'int'", "'string'", 
                                                            "'jsonfile'", 
                                                            "'path'", "'mutator'", 
                                                            "'interface'", 
                                                            "'float'", "'if'", 
                                                            "'else'", "'while'", 
                                                            "'print'", "'func'", 
                                                            null, null, 
                                                            null, "'CREATE_INTERFACE'", 
                                                            "'REQUIRE_PLUGIN'", 
                                                            "'CREATE_MUTATOR'", 
                                                            "'CREATE_WEIGHTED_MUTATOR'", 
                                                            "'GENERATE'", 
                                                            "'GENERATE_WITH_MUTATORS'", 
                                                            null, null, 
                                                            null, null, 
                                                            "'->'", "'+'", 
                                                            "'-'", "'*'", 
                                                            "'/'", "'>'", 
                                                            "'>='", "'<'", 
                                                            "'<='", "'=='", 
                                                            "','", "'!='", 
                                                            "'='", "'('", 
                                                            "')'", "'{'", 
                                                            "'}'", "'['", 
                                                            "']'", "';'", 
                                                            "':'", "'\"'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "BOOL_TYPE", 
                                                             "INT_TYPE", 
                                                             "STRING_TYPE", 
                                                             "JSONFILE_TYPE", 
                                                             "PATH_TYPE", 
                                                             "MUTATOR_TYPE", 
                                                             "INTERFACE_TYPE", 
                                                             "FLOAT_TYPE", 
                                                             "IF", "ELSE", 
                                                             "WHILE", "PRINT", 
                                                             "FUNCTION", 
                                                             "BOOL", "TRUE", 
                                                             "FALSE", "CREATE_INTERFACE", 
                                                             "REQUIRE_PLUGIN", 
                                                             "CREATE_MUTATOR", 
                                                             "CREATE_WEIGHTED_MUTATOR", 
                                                             "GENERATE", 
                                                             "GENERATE_WITH_MUTATORS", 
                                                             "ID", "INT", 
                                                             "FLOAT", "STRING", 
                                                             "SET", "PLUS", 
                                                             "MINUS", "TIMES", 
                                                             "DIVIDE", "GT", 
                                                             "GE", "LT", 
                                                             "LE", "EQ", 
                                                             "COMMA", "NE", 
                                                             "ASSIGN", "LPAREN", 
                                                             "RPAREN", "LBRACE", 
                                                             "RBRACE", "LSQRBRAKET", 
                                                             "RSQRBRAKET", 
                                                             "SEMICOLON", 
                                                             "COLON", "DOUBLEQUOTE", 
                                                             "COMMENT", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "syntax", "declaration", "statements", "functions", "array", 
		"any", "variables", "createInterface", "createMutator", "createWeightedMutator", 
		"generate", "generateWithMutators", "requirePlugin",
	];
	public get grammarFileName(): string { return "DataStructureGrammarParser.g4"; }
	public get literalNames(): (string | null)[] { return DataStructureGrammarParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return DataStructureGrammarParser.symbolicNames; }
	public get ruleNames(): string[] { return DataStructureGrammarParser.ruleNames; }
	public get serializedATN(): number[] { return DataStructureGrammarParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, DataStructureGrammarParser._ATN, DataStructureGrammarParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, DataStructureGrammarParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 29;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 28;
				this.syntax();
				}
				}
				this.state = 31;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 8258046) !== 0));
			this.state = 33;
			this.match(DataStructureGrammarParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public syntax(): SyntaxContext {
		let localctx: SyntaxContext = new SyntaxContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, DataStructureGrammarParser.RULE_syntax);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 35;
			this.declaration();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public declaration(): DeclarationContext {
		let localctx: DeclarationContext = new DeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, DataStructureGrammarParser.RULE_declaration);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 39;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 1:
			case 2:
			case 3:
			case 4:
			case 5:
			case 6:
			case 7:
			case 8:
				{
				this.state = 37;
				this.variables();
				}
				break;
			case 17:
			case 18:
			case 19:
			case 20:
			case 21:
			case 22:
				{
				this.state = 38;
				this.statements();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 41;
			this.match(DataStructureGrammarParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statements(): StatementsContext {
		let localctx: StatementsContext = new StatementsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, DataStructureGrammarParser.RULE_statements);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 43;
			this.functions();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functions(): FunctionsContext {
		let localctx: FunctionsContext = new FunctionsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, DataStructureGrammarParser.RULE_functions);
		try {
			this.state = 51;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 17:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 45;
				this.createInterface();
				}
				break;
			case 18:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 46;
				this.requirePlugin();
				}
				break;
			case 19:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 47;
				this.createMutator();
				}
				break;
			case 20:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 48;
				this.createWeightedMutator();
				}
				break;
			case 21:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 49;
				this.generate();
				}
				break;
			case 22:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 50;
				this.generateWithMutators();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public array(): ArrayContext {
		let localctx: ArrayContext = new ArrayContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, DataStructureGrammarParser.RULE_array);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 53;
			this.match(DataStructureGrammarParser.LSQRBRAKET);
			this.state = 62;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 125845504) !== 0)) {
				{
				this.state = 54;
				this.any_();
				this.state = 59;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===37) {
					{
					{
					this.state = 55;
					this.match(DataStructureGrammarParser.COMMA);
					this.state = 56;
					this.any_();
					}
					}
					this.state = 61;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 64;
			this.match(DataStructureGrammarParser.RSQRBRAKET);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public any_(): AnyContext {
		let localctx: AnyContext = new AnyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, DataStructureGrammarParser.RULE_any);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 66;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 125845504) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public variables(): VariablesContext {
		let localctx: VariablesContext = new VariablesContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, DataStructureGrammarParser.RULE_variables);
		try {
			this.state = 103;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 3:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 68;
				this.match(DataStructureGrammarParser.STRING_TYPE);
				this.state = 69;
				this.match(DataStructureGrammarParser.ID);
				this.state = 70;
				this.match(DataStructureGrammarParser.SET);
				this.state = 71;
				this.match(DataStructureGrammarParser.STRING);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 72;
				this.match(DataStructureGrammarParser.INT_TYPE);
				this.state = 73;
				this.match(DataStructureGrammarParser.ID);
				this.state = 74;
				this.match(DataStructureGrammarParser.SET);
				this.state = 75;
				this.match(DataStructureGrammarParser.INT);
				}
				break;
			case 1:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 76;
				this.match(DataStructureGrammarParser.BOOL_TYPE);
				this.state = 77;
				this.match(DataStructureGrammarParser.ID);
				this.state = 78;
				this.match(DataStructureGrammarParser.SET);
				this.state = 79;
				this.match(DataStructureGrammarParser.BOOL);
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 80;
				this.match(DataStructureGrammarParser.PATH_TYPE);
				this.state = 81;
				this.match(DataStructureGrammarParser.ID);
				this.state = 82;
				this.match(DataStructureGrammarParser.SET);
				this.state = 83;
				this.match(DataStructureGrammarParser.STRING);
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 84;
				this.match(DataStructureGrammarParser.JSONFILE_TYPE);
				this.state = 85;
				this.match(DataStructureGrammarParser.ID);
				this.state = 86;
				this.match(DataStructureGrammarParser.SET);
				this.state = 87;
				this.match(DataStructureGrammarParser.STRING);
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 88;
				this.match(DataStructureGrammarParser.FLOAT_TYPE);
				this.state = 89;
				this.match(DataStructureGrammarParser.ID);
				this.state = 90;
				this.match(DataStructureGrammarParser.SET);
				this.state = 91;
				this.match(DataStructureGrammarParser.FLOAT);
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 92;
				this.match(DataStructureGrammarParser.MUTATOR_TYPE);
				this.state = 93;
				this.match(DataStructureGrammarParser.ID);
				this.state = 94;
				this.match(DataStructureGrammarParser.SET);
				this.state = 97;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 19:
					{
					this.state = 95;
					this.createMutator();
					}
					break;
				case 20:
					{
					this.state = 96;
					this.createWeightedMutator();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 99;
				this.match(DataStructureGrammarParser.INTERFACE_TYPE);
				this.state = 100;
				this.match(DataStructureGrammarParser.ID);
				this.state = 101;
				this.match(DataStructureGrammarParser.SET);
				{
				this.state = 102;
				this.createInterface();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public createInterface(): CreateInterfaceContext {
		let localctx: CreateInterfaceContext = new CreateInterfaceContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, DataStructureGrammarParser.RULE_createInterface);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 105;
			this.match(DataStructureGrammarParser.CREATE_INTERFACE);
			this.state = 106;
			this.match(DataStructureGrammarParser.LPAREN);
			this.state = 107;
			this.match(DataStructureGrammarParser.STRING);
			this.state = 108;
			this.match(DataStructureGrammarParser.COMMA);
			this.state = 109;
			_la = this._input.LA(1);
			if(!(_la===23 || _la===26)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 110;
			this.match(DataStructureGrammarParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public createMutator(): CreateMutatorContext {
		let localctx: CreateMutatorContext = new CreateMutatorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, DataStructureGrammarParser.RULE_createMutator);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 112;
			this.match(DataStructureGrammarParser.CREATE_MUTATOR);
			this.state = 113;
			this.match(DataStructureGrammarParser.LPAREN);
			this.state = 114;
			this.match(DataStructureGrammarParser.STRING);
			this.state = 115;
			this.match(DataStructureGrammarParser.COMMA);
			this.state = 116;
			_la = this._input.LA(1);
			if(!(_la===23 || _la===25)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 117;
			this.match(DataStructureGrammarParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public createWeightedMutator(): CreateWeightedMutatorContext {
		let localctx: CreateWeightedMutatorContext = new CreateWeightedMutatorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, DataStructureGrammarParser.RULE_createWeightedMutator);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 119;
			this.match(DataStructureGrammarParser.CREATE_WEIGHTED_MUTATOR);
			this.state = 120;
			this.match(DataStructureGrammarParser.LPAREN);
			this.state = 121;
			this.match(DataStructureGrammarParser.STRING);
			this.state = 122;
			this.match(DataStructureGrammarParser.COMMA);
			this.state = 123;
			_la = this._input.LA(1);
			if(!(_la===23 || _la===25)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 124;
			this.match(DataStructureGrammarParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public generate(): GenerateContext {
		let localctx: GenerateContext = new GenerateContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, DataStructureGrammarParser.RULE_generate);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 126;
			this.match(DataStructureGrammarParser.GENERATE);
			this.state = 127;
			this.match(DataStructureGrammarParser.LPAREN);
			this.state = 128;
			_la = this._input.LA(1);
			if(!(_la===23 || _la===26)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 129;
			this.match(DataStructureGrammarParser.COMMA);
			this.state = 130;
			this.match(DataStructureGrammarParser.INT);
			this.state = 131;
			this.match(DataStructureGrammarParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public generateWithMutators(): GenerateWithMutatorsContext {
		let localctx: GenerateWithMutatorsContext = new GenerateWithMutatorsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, DataStructureGrammarParser.RULE_generateWithMutators);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 133;
			this.match(DataStructureGrammarParser.GENERATE_WITH_MUTATORS);
			this.state = 134;
			this.match(DataStructureGrammarParser.LPAREN);
			this.state = 135;
			_la = this._input.LA(1);
			if(!(_la===23 || _la===26)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 136;
			this.match(DataStructureGrammarParser.COMMA);
			this.state = 137;
			this.array();
			this.state = 138;
			this.match(DataStructureGrammarParser.COMMA);
			this.state = 139;
			this.match(DataStructureGrammarParser.INT);
			this.state = 140;
			this.match(DataStructureGrammarParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public requirePlugin(): RequirePluginContext {
		let localctx: RequirePluginContext = new RequirePluginContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, DataStructureGrammarParser.RULE_requirePlugin);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 142;
			this.match(DataStructureGrammarParser.REQUIRE_PLUGIN);
			this.state = 143;
			this.match(DataStructureGrammarParser.LPAREN);
			this.state = 144;
			this.match(DataStructureGrammarParser.STRING);
			this.state = 145;
			this.match(DataStructureGrammarParser.RPAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!DataStructureGrammarParser.__ATN) {
			DataStructureGrammarParser.__ATN = new ATNDeserializer().deserialize(DataStructureGrammarParser._serializedATN);
		}

		return DataStructureGrammarParser.__ATN;
	}


	static DecisionsToDFA = DataStructureGrammarParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class ProgramContext extends ParserRuleContext {
	constructor(parser?: DataStructureGrammarParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public EOF(): TerminalNode {
		return this.getToken(DataStructureGrammarParser.EOF, 0);
	}
	public syntax_list(): SyntaxContext[] {
		return this.getTypedRuleContexts(SyntaxContext) as SyntaxContext[];
	}
	public syntax(i: number): SyntaxContext {
		return this.getTypedRuleContext(SyntaxContext, i) as SyntaxContext;
	}
    public get ruleIndex(): number {
    	return DataStructureGrammarParser.RULE_program;
	}
	// @Override
	public accept<Result>(visitor: DataStructureGrammarParserVisitor<Result>): Result {
		if (visitor.visitProgram) {
			return visitor.visitProgram(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class SyntaxContext extends ParserRuleContext {
	constructor(parser?: DataStructureGrammarParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public declaration(): DeclarationContext {
		return this.getTypedRuleContext(DeclarationContext, 0) as DeclarationContext;
	}
    public get ruleIndex(): number {
    	return DataStructureGrammarParser.RULE_syntax;
	}
	// @Override
	public accept<Result>(visitor: DataStructureGrammarParserVisitor<Result>): Result {
		if (visitor.visitSyntax) {
			return visitor.visitSyntax(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class DeclarationContext extends ParserRuleContext {
	constructor(parser?: DataStructureGrammarParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public SEMICOLON(): TerminalNode {
		return this.getToken(DataStructureGrammarParser.SEMICOLON, 0);
	}
	public variables(): VariablesContext {
		return this.getTypedRuleContext(VariablesContext, 0) as VariablesContext;
	}
	public statements(): StatementsContext {
		return this.getTypedRuleContext(StatementsContext, 0) as StatementsContext;
	}
    public get ruleIndex(): number {
    	return DataStructureGrammarParser.RULE_declaration;
	}
	// @Override
	public accept<Result>(visitor: DataStructureGrammarParserVisitor<Result>): Result {
		if (visitor.visitDeclaration) {
			return visitor.visitDeclaration(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class StatementsContext extends ParserRuleContext {
	constructor(parser?: DataStructureGrammarParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public functions(): FunctionsContext {
		return this.getTypedRuleContext(FunctionsContext, 0) as FunctionsContext;
	}
    public get ruleIndex(): number {
    	return DataStructureGrammarParser.RULE_statements;
	}
	// @Override
	public accept<Result>(visitor: DataStructureGrammarParserVisitor<Result>): Result {
		if (visitor.visitStatements) {
			return visitor.visitStatements(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FunctionsContext extends ParserRuleContext {
	constructor(parser?: DataStructureGrammarParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public createInterface(): CreateInterfaceContext {
		return this.getTypedRuleContext(CreateInterfaceContext, 0) as CreateInterfaceContext;
	}
	public requirePlugin(): RequirePluginContext {
		return this.getTypedRuleContext(RequirePluginContext, 0) as RequirePluginContext;
	}
	public createMutator(): CreateMutatorContext {
		return this.getTypedRuleContext(CreateMutatorContext, 0) as CreateMutatorContext;
	}
	public createWeightedMutator(): CreateWeightedMutatorContext {
		return this.getTypedRuleContext(CreateWeightedMutatorContext, 0) as CreateWeightedMutatorContext;
	}
	public generate(): GenerateContext {
		return this.getTypedRuleContext(GenerateContext, 0) as GenerateContext;
	}
	public generateWithMutators(): GenerateWithMutatorsContext {
		return this.getTypedRuleContext(GenerateWithMutatorsContext, 0) as GenerateWithMutatorsContext;
	}
    public get ruleIndex(): number {
    	return DataStructureGrammarParser.RULE_functions;
	}
	// @Override
	public accept<Result>(visitor: DataStructureGrammarParserVisitor<Result>): Result {
		if (visitor.visitFunctions) {
			return visitor.visitFunctions(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

